<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.nathansass.todoapp.EditItemActivity">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/editModalTitle"
            android:id="@+id/tvEditLabel"
            android:layout_alignParentTop="true"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/darker_gray"/>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:orientation="vertical"
                        android:id="@+id/catPictureLayout"
                        android:layout_width="250dp"
                        android:layout_below="@+id/tvEditLabel"
                        android:layout_centerHorizontal="true"
                        android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change Photo"
                android:id="@+id/btnChangePhoto"
                android:textColor="@color/ColorPositiveGreen"
                android:layout_alignParentRight="true"
                android:background="@android:color/background_light"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="10dp"
                android:minHeight="30dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/catpicture"
                android:id="@+id/catPicture"/>

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/editItem"
            android:id="@+id/labelEditItem"
            android:layout_below="@id/catPictureLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etItemTitle"
            android:layout_below="@+id/labelEditItem"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_below="@+id/etItemTitle"
            android:text="@string/addBday"
            android:id="@+id/tvAddBirthday"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etAddBday"
            android:layout_below="@+id/tvAddBirthday"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:inputType="text"
            />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:id="@+id/dispositionWidget"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/etAddBday"
                      android:layout_marginBottom="40dp"
                      android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/etAddBday"
                android:text="@string/Mood"
                android:id="@+id/tvMoodLabel"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:gravity="center"
                          android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/tvDisposition"
                    android:text="@string/mediumMood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/background_light"
                    android:background="@drawable/label_background"
                    android:layout_marginLeft="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"/>
             </LinearLayout>

            <SeekBar
                android:id="@+id/sbDisposition"
                android:progress="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="2"/>

        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/btnSubmitEdits"
            android:layout_below="@+id/dispositionWidget"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/background_light"
            android:background="@color/ColorPositiveGreen"/>

    </RelativeLayout>
</ScrollView>